fix humongous h1 tags on Safari

--- a/client/public/global.css
+++ b/client/public/global.css
@@ -29,7 +29,7 @@ body {
 h1 {
   font-family: "Open Sans";
   font-weight: 200;
-  font-size: clamp(2rem, 3vw, 5rem);
+  font-size: clamp(2rem, 2.25vw, 5rem);
 }
 
 a {
